--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.544.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.1",
     "react-router-dom": "^7.9.1"
